New dash y spawn de columnas
Añadí el dash más reciente y ahora las columnas hacen spawn randomly (aun necesito hacer que la columna sin piso arriba deje de spawn).

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=38,Y=0)
+NewWindowPosition=(X=105,Y=103)
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -82,7 +82,7 @@ MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 MRUItem3=/Game/SideScrollerBP/Maps/WorldJumper
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/LvlGenrating
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.632075
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -932,6 +932,20 @@ CameraBP_C.Current Camera Settings=True
 CameraBP_C.Replication=True
 CameraBP_C.Actor=True
 CameraBP_C.Default=True
+Pillar_C.Tick=True
+Pillar_C.Rendering=True
+Pillar_C.Replication=True
+Pillar_C.Input=True
+Pillar_C.Actor=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/LvlGenrating/FloorPlataform.FloorPlataform;
@@ -968,7 +982,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=G:/GitHub/JuegoRise/Content/SideScrollerBP/Maps
+UNR=../../../../../../Users/narej/OneDrive/Documents/Unreal Projects/InfiniteJumper - MF/JuegoRise/Content/SideScrollerBP/Maps
 BRUSH=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
 FBX=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
 FBXAnim=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
@@ -1470,7 +1484,7 @@ BlueprintProfiler.TimeStamp=2017.11.02-00.05.41
 BlueprintProfiler.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.11.02-00.05.41
 BlueprintGraph.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2017.08.24-22.44.14
+HierarchicalLODUtilities.TimeStamp=2017.09.05-20.29.39
 HierarchicalLODUtilities.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2017.02.23-02.04.40
 NewLevelDialog.LastCompileMethod=Unknown
@@ -1548,8 +1562,8 @@ PIEPreviewDeviceProfileSelector.TimeStamp=2017.11.02-00.05.57
 PIEPreviewDeviceProfileSelector.LastCompileMethod=External
 MeshPaintMode.TimeStamp=2017.11.02-00.05.55
 MeshPaintMode.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2017.08.24-22.44.02
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.09.05-20.29.36
+ExternalImagePicker.LastCompileMethod=External
 SynthBenchmark.TimeStamp=2017.11.02-00.06.03
 SynthBenchmark.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2017.08.24-22.45.44
@@ -1595,6 +1609,7 @@ UATHelper.LastCompileMethod=Unknown
 /Game/SideScrollerBP/Blueprints/LvlGenrating/Wall.Wall=0
 /Game/SideScrollerBP/3DModels/Rise_Floor_M.Rise_Floor_M=0
 /Game/SideScrollerBP/Blueprints/PowerUpsAndCoins/CameraBP.CameraBP=0
+/Game/SideScrollerBP/Blueprints/LvlGenrating/Pillar.Pillar=0
 
 [DetailPropertyExpansion]
 SideScrollerGameMode_C=
@@ -1610,11 +1625,11 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EdGraphNode_Comment="\"Object.Comment.CommentColor\" "
-EdGraphNode="\"Object.Comment.CommentColor\" "
+EdGraphNode=
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-BP_Level_C=
+BP_Level_C="\"Object.Position\" \"Object.Position\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -1624,6 +1639,11 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 BP_Restart_C="\"Object.\" \"Object.\" "
 UserWidget="\"Object.\" \"Object.\" "
 SpikeLog_C=
+Floor_C=
+SceneComponent=
+ActorComponent=
+BillboardComponent="\"Object.RelativeLocation\" "
+PrimitiveComponent=
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1678,13 +1698,13 @@ AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 
 [DetailCustomWidgetExpansion]
-K2Node_VariableGet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 SideScrollerGameMode_C=
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,
+ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+K2Node_VariableSet=
 IntProperty=
 UserDefinedStruct=
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 HighScoreSaveSlot_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
@@ -1740,6 +1760,9 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 SpikeLog_C=
+Floor_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+ClassProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
 
 [ColorThemes]
 Theme0=New Theme
@@ -1833,5 +1856,8 @@ BaseSpecularTextureName=
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[PluginBrowser]
+InstalledPlugins=RunebergVRPlugin
 
 
