--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 MRUItem3=/Game/SideScrollerBP/Maps/WorldJumper
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/LvlGenrating
 AssetPropertyPicker.ThumbnailSizeScale=0.632075
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -946,6 +946,7 @@ ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
 ClassProperty.Variable=True
 ClassProperty.DefaultValueCategory=True
+Floor_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/LvlGenrating/FloorPlataform.FloorPlataform;
