--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,6 +108,9 @@ LastLevel=/Game/SideScrollerBP/Maps/InfiniteJumper
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/Pillar.Pillar
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/BP_Level.BP_Level
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/Floor.Floor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -947,6 +950,11 @@ ChildActorComponent.Cooking=True
 ClassProperty.Variable=True
 ClassProperty.DefaultValueCategory=True
 Floor_C.Default=True
+BP_EmptyFloorCollision_C.Tick=True
+BP_EmptyFloorCollision_C.Rendering=True
+BP_EmptyFloorCollision_C.Replication=True
+BP_EmptyFloorCollision_C.Input=True
+BP_EmptyFloorCollision_C.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/LvlGenrating/FloorPlataform.FloorPlataform;
@@ -965,7 +973,7 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=0.000
+ScreenPosition=X=37.000 Y=27.000
 WindowSize=X=1356.000 Y=728.000
 InitiallyMaximized=True
 
@@ -1611,6 +1619,7 @@ UATHelper.LastCompileMethod=Unknown
 /Game/SideScrollerBP/3DModels/Rise_Floor_M.Rise_Floor_M=0
 /Game/SideScrollerBP/Blueprints/PowerUpsAndCoins/CameraBP.CameraBP=0
 /Game/SideScrollerBP/Blueprints/LvlGenrating/Pillar.Pillar=0
+/Game/SideScrollerBP/Blueprints/LvlGenrating/BP_EmptyFloorCollision.BP_EmptyFloorCollision=0
 
 [DetailPropertyExpansion]
 SideScrollerGameMode_C=
@@ -1623,14 +1632,14 @@ SideScrollerCharacter_C=
 Character=
 Pawn=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.RelativeLocation\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EdGraphNode_Comment="\"Object.Comment.CommentColor\" "
-EdGraphNode=
+EdGraphNode="\"Object.Comment.CommentColor\" "
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-BP_Level_C="\"Object.Position\" \"Object.Position\" "
+BP_Level_C=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -1641,10 +1650,12 @@ BP_Restart_C="\"Object.\" \"Object.\" "
 UserWidget="\"Object.\" \"Object.\" "
 SpikeLog_C=
 Floor_C=
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.RelativeLocation\" "
+ActorComponent="\"Object.RelativeLocation\" "
 BillboardComponent="\"Object.RelativeLocation\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.RelativeLocation\" "
+BoxComponent="\"Object.Shape.BoxExtent\" "
+ShapeComponent="\"Object.Shape.BoxExtent\" "
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1699,7 +1710,7 @@ AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 
 [DetailCustomWidgetExpansion]
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+K2Node_VariableGet=
 SideScrollerGameMode_C=
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 K2Node_VariableSet=
