PowerUp en general
listado de power ups y dash bp

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=105,Y=103)
+NewWindowPosition=(X=123,Y=35)
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -72,7 +72,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentPosGridSize=1
 GridEnabled=False
-CurrentRotGridSize=6
 CurrentScalingGridSize=5
 
 [MRU]
@@ -82,7 +81,7 @@ MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 MRUItem3=/Game/SideScrollerBP/Maps/WorldJumper
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/LvlGenrating
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/3DModels
 AssetPropertyPicker.ThumbnailSizeScale=0.632075
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -108,9 +107,6 @@ LastLevel=/Game/SideScrollerBP/Maps/InfiniteJumper
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/Pillar.Pillar
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/BP_Level.BP_Level
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/Floor.Floor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -955,6 +951,16 @@ BP_EmptyFloorCollision_C.Rendering=True
 BP_EmptyFloorCollision_C.Replication=True
 BP_EmptyFloorCollision_C.Input=True
 BP_EmptyFloorCollision_C.Actor=True
+BP_PUp_Dash_C.Tick=True
+BP_PUp_Dash_C.Rendering=True
+BP_PUp_Dash_C.Replication=True
+BP_PUp_Dash_C.Input=True
+BP_PUp_Dash_C.Actor=True
+BP_PUp_Camara_C.Tick=True
+BP_PUp_Camara_C.Rendering=True
+BP_PUp_Camara_C.Replication=True
+BP_PUp_Camara_C.Input=True
+BP_PUp_Camara_C.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/LvlGenrating/FloorPlataform.FloorPlataform;
@@ -1493,7 +1499,7 @@ BlueprintProfiler.TimeStamp=2017.11.02-00.05.41
 BlueprintProfiler.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.11.02-00.05.41
 BlueprintGraph.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2017.09.05-20.29.39
+HierarchicalLODUtilities.TimeStamp=2017.11.02-00.05.51
 HierarchicalLODUtilities.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2017.02.23-02.04.40
 NewLevelDialog.LastCompileMethod=Unknown
@@ -1620,6 +1626,8 @@ UATHelper.LastCompileMethod=Unknown
 /Game/SideScrollerBP/Blueprints/PowerUpsAndCoins/CameraBP.CameraBP=0
 /Game/SideScrollerBP/Blueprints/LvlGenrating/Pillar.Pillar=0
 /Game/SideScrollerBP/Blueprints/LvlGenrating/BP_EmptyFloorCollision.BP_EmptyFloorCollision=0
+/Game/SideScrollerBP/Blueprints/PowerUpsAndCoins/BP_PUp_Camara.BP_PUp_Camara=0
+/Game/SideScrollerBP/Blueprints/PowerUpsAndCoins/BP_PUp_Dash.BP_PUp_Dash=0
 
 [DetailPropertyExpansion]
 SideScrollerGameMode_C=
@@ -1632,14 +1640,14 @@ SideScrollerCharacter_C=
 Character=
 Pawn=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.RelativeLocation\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EdGraphNode_Comment="\"Object.Comment.CommentColor\" "
 EdGraphNode="\"Object.Comment.CommentColor\" "
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-BP_Level_C=
+BP_Level_C="\"Object.PowerUpList\" \"Object.PowerUpList\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -1650,10 +1658,10 @@ BP_Restart_C="\"Object.\" \"Object.\" "
 UserWidget="\"Object.\" \"Object.\" "
 SpikeLog_C=
 Floor_C=
-SceneComponent="\"Object.RelativeLocation\" "
-ActorComponent="\"Object.RelativeLocation\" "
+SceneComponent=
+ActorComponent=
 BillboardComponent="\"Object.RelativeLocation\" "
-PrimitiveComponent="\"Object.RelativeLocation\" "
+PrimitiveComponent=
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
 
@@ -1710,13 +1718,13 @@ AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 
 [DetailCustomWidgetExpansion]
-K2Node_VariableGet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 SideScrollerGameMode_C=
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+ObjectProperty=
 K2Node_VariableSet=
 IntProperty=
 UserDefinedStruct=
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 HighScoreSaveSlot_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
@@ -1773,8 +1781,9 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bi
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 SpikeLog_C=
 Floor_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
-ClassProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+ClassProperty=
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
+BP_Level_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ColorThemes]
 Theme0=New Theme
