--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -29,7 +29,7 @@
 +AxisConfig=(AxisKeyName="Gamepad_Special_Left_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
-bUseMouseForTouch=False
+bUseMouseForTouch=True
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
@@ -44,16 +44,16 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Dash",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Dash",Key=RightShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="TouchInput",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 bAlwaysShowTouchInterface=False
-bShowConsoleOnFourFingerTap=True
+bShowConsoleOnFourFingerTap=False
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-
 
