Added comments to dash
Dash comments.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,7 +84,7 @@ MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 MRUItem3=/Game/SideScrollerBP/Maps/WorldJumper
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/LvlGenrating
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.632075
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -110,8 +110,7 @@ LastLevel=/Game/SideScrollerBP/Maps/InfiniteJumper
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/LvlGenrating/BP_Level.BP_Level
-OpenAssetsAtExit=/Game/SideScrollerBP/3DModels/Side_walls.Side_walls
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1130,7 +1129,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=G:/GitHub/JuegoRise/Content/SideScrollerBP/Maps
+UNR=../../../../../../Users/narej/OneDrive/Documents/Unreal Projects/InfiniteJumper - MF/JuegoRise/Content/SideScrollerBP/Maps
 BRUSH=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
 FBX=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
 FBXAnim=../../../../../../Users/panda/Documents/Unreal Projects/InfiniteJumper/Content/
@@ -1826,7 +1825,7 @@ UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1945,7 +1944,7 @@ Floor_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueC
 ClassProperty=
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
 BP_Level_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-CameraComponent=CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Global Illumination,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Lens.Lens|Auto ExposureAdvanced,CameraComponent.Lens.Lens|Auto Exposure,
+CameraComponent=CameraComponent.Color Grading.Color Grading
 
 [ColorThemes]
 Theme0=New Theme
