Se creo el button de restart
El restart affecta el HUD de restart, se creo un save instance que guarde los valores de si se presiono el buton y en que dificultad estabas, estos se comunican en el main menu para generar los valores y en el sidescroller para generar los pisos. -.-

--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -202,7 +202,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.96899217367172241,\
+									"SizeCoefficient": 1.195345401763916,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
 									"ForegroundTab": "Document : 0",\
@@ -214,14 +214,14 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.96899217367172241,\
+									"SizeCoefficient": 0.74263614416122437,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "None",\
+									"ForegroundTab": "CompilerResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										)\
 									]\
 								),\
