--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -52,7 +52,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=False
-DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
+DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
